# Cards_ADHS

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-anki.yml
cards/: 01_beginner_onboarding.yml  02_neurobio.yml  03_practice.yml
src/cards_adhs_builder/: __init__.py  build_decks.py
tests/: test_build_decks.py
