[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cards-adhs-builder"
version = "0.1.0"
description = "Build wissenschaftlich gepflegte ADHS-Anki-Decks aus YAML-Dateien."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "H234598" }
]
dependencies = [
  "genanki>=0.13,<0.14",
  "Markdown>=3.5,<4",
  "PyYAML>=6.0,<7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9"
]

[project.scripts]
cards-adhs-build = "cards_adhs_builder.build_decks:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
